--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^4.1.0",
     "prop-types": "^15.5.10",
     "style-loader": "^0.13.2",
+    "url-loader": "^0.5.9",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   }
