--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scroll": "^1.5.3"
+    "react-scroll": "^1.5.3",
+    "react-transition-group": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -42,6 +43,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.25.0",
     "eslint": "^4.1.0",
+    "file-loader": "^0.11.2",
     "prop-types": "^15.5.10",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.9",
