--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
   },
   "homepage": "https://github.com/approximata/ReactOnePagerTemplate#readme",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scroll": "^1.5.3",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
@@ -42,6 +39,10 @@
     "eslint": "^4.1.0",
     "file-loader": "^0.11.2",
     "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-lazyload": "^2.2.7",
+    "react-scroll": "^1.5.3",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.4.1",
