--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build",
-    "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot --process.env.PORT --history-api-fallback"
+    "start": "npm server",
+    "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot --port 1234 --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
     ]
   },
   "homepage": "https://github.com/approximata/ReactOnePagerTemplate#readme",
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
@@ -37,7 +37,6 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.25.0",
     "eslint": "^4.1.0",
-    "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
