--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "url-loader": "^0.5.9",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "express": "^4.15.3"
   }
 }
